# AIROLAB_Telemtry

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run.bat
Core/: CMakeLists.txt
Core/src/: InputManager.h  JsonConfig.cpp  JsonConfig.h  Logger.h
app/: .qmlls.ini  CMakeLists.txt  resources.qrc
app/include/: Constants.h  Datagram.h  TelemetryDataHandler.h  Types.h
app/src/: Datagram.cpp  TelemetryDataHandler.cpp  main.cpp
config/: config.json
libCore/: CMakeLists.txt
libCore/include/: AsyncExecutor.h  InputManager.h  JsonConfig.h  Logger.h
libCore/src/: AsyncExecutor.cpp  InputManager.cpp  JsonConfig.cpp  Logger.cpp
qml/: Main.qml
src/: main.cpp
